03-FORENSICS/0x00-MonkeyGame3-H/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: monkey-game3
  labels:
    app: monkey-game3
spec:
  ports:
    - name: http-port
      port: 8000
  selector:
    app: monkey-game3
